<resources >
    <string name="app_name">udacity-redditgo</string>
    <string name="action_settings">Settings</string>

    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>

    <string name="list_title">TO-DO List</string>
    <string name="statistics_title">Statistics</string>

    <string name="side_front_page">Front Page</string>
    <string name="side_all">All</string>
    <string name="side_subreddits">Subreddits</string>

    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>

    <string name="refresh">Refresh</string>

    <string name="filter_hot">Hot</string>
    <string name="filter_new">New</string>
    <string name="filter_rising">Rising</string>
    <string name="filter_controversial">Controversial</string>
    <string name="filter_top">Top</string>

    <string name="submit">submitted {hour} hours ago by {author} to /r/{subreddit}</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Logß in</string>

    <!-- Strings related to signin -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Please Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="empty_submission_list">Submission informations fetch.\nPlease wait!</string>
    <string name="filter_old">Old</string>
    <string name="filter_qa">QA</string>
    <string name="navigation_description">close</string>
    <string name="title_widget_stock">RedditGo</string>
</resources>
